[gd_scene load_steps=3 format=3 uid="uid://dm1f8nv08c4u5"]

[ext_resource type="Script" path="res://Scripts/Menu Button Scripts/Back.gd" id="1_60a0m"]
[ext_resource type="Texture2D" uid="uid://dhpnikdfc31qs" path="res://Images/PLACE HOLDER DELETE BEFORE RELEASE/Untitled.svg" id="2_0ltq1"]

[node name="Credits" type="Node2D"]
script = ExtResource("1_60a0m")

[node name="TextEdit" type="TextEdit" parent="."]
offset_left = 144.0
offset_top = 48.0
offset_right = 424.0
offset_bottom = 248.0
theme_override_font_sizes/font_size = 25
text = "CREDITS"
editable = false
selecting_enabled = false

[node name="Button" type="Button" parent="."]
offset_left = 544.0
offset_top = 64.0
offset_right = 589.0
offset_bottom = 95.0
theme_override_font_sizes/font_size = 129
text = "Back"

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(576, 324)
scale = Vector2(9, 5.0625)
texture = ExtResource("2_0ltq1")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
