[gd_scene load_steps=2 format=3 uid="uid://brh04vhkbbt0e"]

[ext_resource type="Script" path="res://Scripts/Menu Button Scripts/Back.gd" id="1_38y60"]

[node name="Pause Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_38y60")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 1088.0
offset_bottom = 248.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "Resume"
icon_alignment = 1

[node name="Quit to main menu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "Quit to main menu"

[node name="Quit to Desktop" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "Quit to desktop"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit to main menu" to="." method="_on_quit_to_main_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit to Desktop" to="." method="_on_quit_to_desktop_pressed"]
